--- a/mytest/res/values/colors.xml
+++ b/mytest/res/values/colors.xml
@@ -1,5 +1,137 @@
 <resources>
 
     <color name="black_overlay">#66000000</color>
+       <color name="setting_common_bg">#ffe5e5e5</color>
+           <color name="setting_common_line">#ffd1d1d1</color>
+               <color name="msp_dialog_tiltle_blue">#ff2277bb</color>
+    <color name="msp_text_color_gray">#ff333333</color>
+    <color name="msp_hint_color">#ffb2b2b2</color>
+    <color name="msp_line_color">#ffcccccc</color>
+    <color name="msp_combox_list_devider_color">#ffd8d8d8</color>
+    <color name="mini_text_color_gray">#ff333333</color>
+    <color name="mini_hint_color">#ffb2b2b2</color>
+    <color name="mini_error_hint_color">#ffffffff</color>
+    <color name="mini_error_input">#ffff0000</color>
+    <color name="mini_text_shadow">#fffefefe</color>
+    <color name="mini_text_white">#ffffffff</color>
+    <color name="mini_text_black">#ff000000</color>
+    <color name="mini_button_text_disable">#ffaaaaaa</color>
+    <color name="mini_button_text_normal">#ffffffff</color>
+    <color name="mini_text_link">#ff2861d7</color>
+    <color name="mini_list_bg_color">#ffbababa</color>
+    <color name="mini_page_bg_color">#ffededed</color>
+    <color name="mini_input_hint_color">#ffcccccc</color>
+    <color name="mini_win_background">#00000000</color>
+    <color name="mini_card_defaultuse">#ffff9933</color>
+    <color name="mini_color_gray">#ff666666</color>
+    <color name="mini_color_light_gray">#ff999999</color>
+    <color name="mini_cardlimit_text_color">#ff000000</color>
+    <color name="mini_cardlimit_money_color">#ff666666</color>
+    <color name="mini_card_edti_bk">#ff31373e</color>
+    <color name="mini_card_edit_pop_shadow">#59000000</color>
+    <color name="setting_translucent_bg">#e0000000</color>
+    <color name="chat_gray">#ff4f4f4f</color>
+    <color name="white">#ffffffff</color>
+    <color name="gray">#ff777777</color>
+    <color name="black">#ff000000</color>
+    <color name="coffee">#dd969696</color>
+    <color name="black_text">#ff414141</color>
+    <color name="coffee_text">#ff434343</color>
+    <color name="yellow">#ffd9d919</color>
+    <color name="dark_blue">#ff3681e7</color>
+    <color name="red">#ffff0000</color>
+    <color name="gray_text">#ff5e5e5e</color>
+    <color name="gray_text_invited">#ff747474</color>
+    <color name="gray_shadow_text">#ff9e9e9e</color>
+    <color name="green">#ff61a71a</color>
+    <color name="toasterro">#ff9fd524</color>
+    <color name="semitransparent">#80000000</color>
+    <color name="lightransparent">#a0000000</color>
+    <color name="transparent">#00000000</color>
+    <color name="iphoneDivider">#ffababab</color>
+    <color name="setting_title">#ff4c566c</color>
+    <color name="dark_green">#ff008000</color>
+    <color name="light_green">#ff3a9c4b</color>
+    <color name="text_gray">#ff9b9b9b</color>
+    <color name="tabMedium">#ff2b2b2b</color>
+    <color name="tabDark">#ff000000</color>
+    <color name="tabTransparent">#10ffffff</color>
+    <color name="vpi__background_holo_dark">#ff000000</color>
+    <color name="vpi__background_holo_light">#fff3f3f3</color>
+    <color name="vpi__bright_foreground_holo_dark">@color/vpi__background_holo_light</color>
+    <color name="vpi__bright_foreground_holo_light">@color/vpi__background_holo_dark</color>
+    <color name="vpi__bright_foreground_disabled_holo_dark">#ff4c4c4c</color>
+    <color name="vpi__bright_foreground_disabled_holo_light">#ffb2b2b2</color>
+    <color name="vpi__bright_foreground_inverse_holo_dark">@color/vpi__bright_foreground_holo_light</color>
+    <color name="vpi__bright_foreground_inverse_holo_light">@color/vpi__bright_foreground_holo_dark</color>
+    <color name="default_circle_indicator_fill_color">#ffffffff</color>
+    <color name="default_circle_indicator_page_color">#00000000</color>
+    <color name="alpha_black">#00000000</color>
+    <color name="alpha_bg">#cc000000</color>
+    <color name="alpha_light_bg">#77000000</color>
+    <color name="color_gray">#ffeaeaea</color>
+    <color name="default_circle_indicator_stroke_color">#ffdddddd</color>
+    <color name="default_title_indicator_footer_color">#ff6899ff</color>
+    <color name="default_title_indicator_selected_color">#ffffffff</color>
+    <color name="default_title_indicator_text_color">#bbffffff</color>
+    <color name="discuss_select">#ff66cd00</color>
+    <color name="translate">#00000000</color>
+    <color name="one_click_call_taxi_unedit">#ffbdbdbd</color>
+    <color name="one_click_call_taxi_edited">#ff444444</color>
+    <color name="order_time_checked">#ff5ca206</color>
+    <color name="order_time_unchecked">#ff434343</color>
+    <color name="ad_homepage_text_color">#ff82613e</color>
+    <color name="color_guide_bg">#ff29262d</color>
+    <color name="color_guide_pressed_bg">#ffdddddd</color>
+    <color name="color_rab_btn_gray">#ff486a00</color>
+    <color name="color_add_coin_text">#ff6a3906</color>
+    <color name="color_reduce_coin_text">#ff486a00</color>
+    <color name="order_no_one_normal">#fff7f7f7</color>
+    <color name="order_no_one_pressed">#ffc7c7c7</color>
+    <color name="order_no_one_pressed_night">#ff1c1e22</color>
+    <color name="order_no_one_normal_night">#ff2e3138</color>
+    <color name="order_no_one_frame">#ffcdcdcd</color>
+    <color name="order_no_one_frame_night">#ff595b5e</color>
+    <color name="order_no_one_text_color">#ff000000</color>
+    <color name="order_no_one_text_color_night">#ff8da1b9</color>
+    <color name="tv_color_sublevel">#ffa84200</color>
+    <color name="channel_info">#ff388712</color>
+    <color name="progressbar_bg">#fff5f5f5</color>
+    <color name="progressbar_setting">#ff18c6ff</color>
+    <color name="background_gray_black">#ff444444</color>
+    <color name="btn_green_normal">#ff4ab439</color>
+    <color name="background_color">#ffeeeeee</color>
+    <color name="record_time_gray">#ff666666</color>
+
+    <color name="setting_common_logout_normal">#ffff5533</color>
+    <color name="setting_common_logout_press">#ffdd3333</color>
+    <color name="about_us_copyright">#ffbdbdbd</color>
+    <color name="lightgrey">#ff888888</color>
+    <color name="aboutus_version">#ff39b44a</color>
+    <color name="green_btn_normal">#ff39b44a</color>
+    <color name="green_btn_press">#ff2e903b</color>
+    <color name="gray_btn">#ffbdbdbd</color>
+    <color name="wait_for_order_accepted_progress_bar_bg">#ffd1d1d1</color>
+    <color name="wait_for_order_accepted_wait_for">#ffbdbdbd</color>
+    <color name="wait_for_order_accepted_seconds">#ff39b44a</color>
+    <color name="wait_for_order_accepted_info_sended">#ff444444</color>
+    <color name="wait_for_order_accepted_drivers">#ffffac1e</color>
+    <color name="passenger_chat_bg">#aaffffff</color>
+    <color name="passenger_font_color">#ffb2b2b2</color>
+    <color name="records_text_gray">#ff888888</color>
+    <color name="reords_time_gray">#ff444444</color>
+    <color name="reords_textcolor_listenvoice">#ff39b44a</color>
+    <color name="one_key_taxi_active_color">#ff39b44a</color>
+    <color name="one_key_taxi_unactive_color">#ffb2b2b2</color>
+    <color name="chat_background_color">#dde7e7e7</color>
+    <color name="chat_background_double">#ddb2b2b2</color>
+    <color name="chat_send_text_color">#ff444444</color>
+    <color name="chat_double_background">#88ffffff</color>
+    <color name="time_pick_startcolor">#99ffffff</color>
+    <color name="time_pick_endcolor">#ddffffff</color>
+    <color name="dialog_color">#ff39bbff</color>
+    <color name="pay_sucessed_green">#ff39b44a</color>
+    <color name="web_background">#ffe8e8e8</color>
+    <color name="choose_voucher_top_item">#fff6f6f6</color>
 
 </resources>
