--- a/mytest/res/values/dimens.xml
+++ b/mytest/res/values/dimens.xml
@@ -8,5 +8,82 @@
     <dimen name="shadow_width">15dp</dimen>
 
     <integer name="num_cols">1</integer>
+    <dimen name="msp_font_medium">16.0sp</dimen>
+    <dimen name="msp_margin_left">10.0dip</dimen>
+    <dimen name="msp_margin_top">7.0dip</dimen>
+    <dimen name="msp_margin_right">10.0dip</dimen>
+    <dimen name="msp_margin_bottom">7.0dip</dimen>
+    <dimen name="msp_margin_default">7.0dip</dimen>
+    <dimen name="msp_dimen_40">40.0dip</dimen>
+    <dimen name="msp_dimen_input_40">40.0dip</dimen>
+    <dimen name="mini_margin_1">1.0dip</dimen>
+    <dimen name="mini_margin_3">3.0dip</dimen>
+    <dimen name="mini_margin_13">13.0dip</dimen>
+    <dimen name="mini_margin_textview_13">9.0dip</dimen>
+    <dimen name="mini_margin_textview_6">3.0dip</dimen>
+    <dimen name="mini_margin_6">6.0dip</dimen>
+    <dimen name="mini_margin_10">10.0dip</dimen>
+    <dimen name="mini_margin_left">14.0dip</dimen>
+    <dimen name="mini_margin_15">15.0dip</dimen>
+    <dimen name="mini_margin_19">19.0dip</dimen>
+    <dimen name="mini_margin_20">20.0dip</dimen>
+    <dimen name="mini_margin_top">10.0dip</dimen>
+    <dimen name="mini_margin_right">14.0dip</dimen>
+    <dimen name="mini_margin_bottom">10.0dip</dimen>
+    <dimen name="mini_margin_default">10.0dip</dimen>
+    <dimen name="mini_add_card_margin_left">21.0dip</dimen>
+    <dimen name="mini_margin_27">27.0dip</dimen>
+    <dimen name="mini_margin_42">42.0dip</dimen>
+    <dimen name="mini_element_default_height">44.0dip</dimen>
+    <dimen name="mini_win_default_height">233.0dip</dimen>
+    <dimen name="mini_win_default_width">280.0dip</dimen>
+    <dimen name="mini_title_height">47.0dip</dimen>
+    <dimen name="mini_text_size_xx_large">20.0sp</dimen>
+    <dimen name="mini_text_size_large">16.0sp</dimen>
+    <dimen name="mini_text_size_medium">15.0sp</dimen>
+    <dimen name="mini_text_size_small">13.0sp</dimen>
+    <dimen name="mini_text_size_x_small">12.0sp</dimen>
+    <dimen name="mini_text_size_link">17.0sp</dimen>
+    <dimen name="mini_text_size_14">14.0sp</dimen>
+    <dimen name="item_left_icon_large">32.0dip</dimen>
+    <dimen name="item_left_icon_small">29.0dip</dimen>
+    <dimen name="discuss_width">140.0dip</dimen>
+    <dimen name="discuss_height">120.0dip</dimen>
+    <dimen name="roundtextview_inside_interval">7.0dip</dimen>
+    <dimen name="roundtextview_paint_width">14.0dip</dimen>
+
+    <dimen name="alert_text_size_small">17.0sp</dimen>
+    <dimen name="alert_text_size_little">15.0sp</dimen>
+    <dimen name="alert_text_size_big">25.0sp</dimen>
+    <dimen name="red_icon_margin">2.0sp</dimen>
+    <dimen name="driver_loation_offset">42.0dip</dimen>
+    <dimen name="driver_alipay_margintop">10.0dip</dimen>
+    <dimen name="driver_alipay_btnmargintop">20.0dip</dimen>
+    <dimen name="back_btn_padding_left">20.0dip</dimen>
+    <dimen name="back_btn_padding_right">15.0dip</dimen>
+    <dimen name="discuss_text_size_small">6.0sp</dimen>
+    <dimen name="discuss_text_size_little">6.0sp</dimen>
+    <dimen name="alipay_pannel_pay_notice_below">20.0sp</dimen>
+    <dimen name="titlebar_height">45.0dip</dimen>
+
+    <dimen name="setting_btn_radius">4.0dip</dimen>
+    <dimen name="virtual_hint_margin_left">10.0dip</dimen>
+    <dimen name="item_height">44.0dip</dimen>
+    <dimen name="pay_notice_text_size">22.0sp</dimen>
+    <dimen name="pay_big_text_size">36.0sp</dimen>
+    <dimen name="pay_small_text_size">12.0sp</dimen>
+    <dimen name="record_list_margin">50.0dip</dimen>
+    <dimen name="record_list_left_margin">8.0dip</dimen>
+    <dimen name="record_list_buttom_margin">16.0dip</dimen>
+    <dimen name="record_list_top_margin">16.0dip</dimen>
+    <dimen name="chat_list_dividerheight">15.0dip</dimen>
+    <dimen name="add_price_pannel_width">43.0sp</dimen>
+    <dimen name="chat_list_voicelenth">20.0dip</dimen>
+    <dimen name="driver_wait_time">30.0dip</dimen>
+    <dimen name="order_city_edittext_margin_right">40.0dip</dimen>
+    <dimen name="circle_text_size">28.0sp</dimen>
+
+    
+    
 
 </resources>
