--- a/mytest/res/values/styles.xml
+++ b/mytest/res/values/styles.xml
@@ -16,5 +16,9 @@
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
+     <style name="setting_common_textview">
+        <item name="android:textSize">16.0sp</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
 
 </resources>
